--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width=device-widh,inicial-scale=1.0">
-        <title>Meu site</title>
-         <link rel="stylesheet" href="style.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lista de Plantações</title>
 </head>
 <body>
+    <h1>Lista de Plantações</h1>
+    <ul>
+        {% for plantacao in plantacoes %}
+            <li><a href="/plantacoes/{{ plantacao.id }}">{{ plantacao.nome }}</a></li>
+        {% endfor %}
+    </ul>
+</body>
+</html>
