--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="nav">
     <div class="container flex1">
       <div class="logo">
-        <img src="image/logo.png" alt="">
+        <img src="logo.png" alt="">
       </div>
       <div class="menu">
         <div class="main_list" id="mainListDiv">
