--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <nav class="nav">
     <div class="container flex1">
       <div class="logo">
-        <img src="image/logo.png" alt="">
+        <img src="logo.png" alt="">
       </div>
       <div class="menu">
         <div class="main_list" id="mainListDiv">
@@ -92,7 +92,7 @@
 
       <div class="right">
         <div class="ani_image">
-          <img src="image/bike.png" alt="">
+          <img src="bike.png" alt="">
         </div>
       </div>
     </div>
@@ -113,7 +113,7 @@
       <div class="content grid top">
         <div class="box">
           <div class="img">
-            <img src="image/l1.png" alt="">
+            <img src="l1.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -129,7 +129,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l2.png" alt="">
+            <img src="l2.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -145,7 +145,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l3.png" alt="">
+            <img src="l3.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -161,7 +161,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l4.png" alt="">
+            <img src="l4.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -177,7 +177,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l5.png" alt="">
+            <img src="l5.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -193,7 +193,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l6.png" alt="">
+            <img src="l6.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -234,7 +234,7 @@
           </div>
           <div class="right">
             <div class="ani_image">
-              <img src="image/bike2.png" alt="">
+              <img src="bike2.png" alt="">
             </div>
           </div>
         </div>
@@ -256,7 +256,7 @@
           </div>
           <div class="right">
             <div class="ani_image">
-              <img src="image/bike2.png" alt="">
+              <img src="bike2.png" alt="">
             </div>
           </div>
         </div>
@@ -310,7 +310,7 @@
       <div class="owl-carousel owl-theme">
         <div class="box">
           <div class="img">
-            <img src="image/l1.png" alt="">
+            <img src="l1.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -326,7 +326,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l2.png" alt="">
+            <img src="l2.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -342,7 +342,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l3.png" alt="">
+            <img src="l3.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -358,7 +358,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/l4.png" alt="">
+            <img src="l4.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -411,7 +411,7 @@
         <button class="btn2">Buy Now</button>
       </div>
       <div class="ani_image">
-        <img src="image/bike3.png" alt="">
+        <img src="bike3.png" alt="">
       </div>
     </div>
   </section>
@@ -432,7 +432,7 @@
       <div class="content grid top">
         <div class="box">
           <div class="img">
-            <img src="image/a1.png" alt="">
+            <img src="a1.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -448,7 +448,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/a2.png" alt="">
+            <img src="a2.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -464,7 +464,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/a3.png" alt="">
+            <img src="a3.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -480,7 +480,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/a4.png" alt="">
+            <img src="a4.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -496,7 +496,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/a5.png" alt="">
+            <img src="a5.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -512,7 +512,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/a6.png" alt="">
+            <img src="a6.png" alt="">
             <div class="flex1">
               <label>50%</label>
               <i class="fas fa-heart"></i>
@@ -569,7 +569,7 @@
     <div class="scontainer grid">
       <div class="box">
         <div class="logo">
-          <img src="image/logo.png" alt="">
+          <img src="logo.png" alt="">
         </div>
         <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h1>+ 123 456 7898</h1>
