--- a/index.html
+++ b/index.html
@@ -31,12 +31,8 @@
       <div class="menu">
         <div class="main_list" id="mainListDiv">
           <ul>
-            <li> <a href="#">Home</a> </li>
-            <li> <a href="#">About</a> </li>
-            <li> <a href="#">My Work</a> </li>
-            <li> <a href="#">Design</a> </li>
-            <li> <a href="#">Contact</a> </li>
-          </ul>
+            <li> <a href="#">Menu</a> </li>
+            <li> <a href="#">Sobre</a> </li>
         </div>
       </div>
       <div class="media_button">
