--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="logo">
         <img class="cabecalho-imagem" src="logo.png" alt="logo">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#Menu">Escola</a></li>
-            <li class="cabecalho-lista-item"><a href="#Sobre">Estudante</a></li>
+            <li class="cabecalho-lista-item"><a href="#Menu">Menu</a></li>
+            <li class="cabecalho-lista-item"><a href="#Sobre">Sobre</a></li>
         </ul>
     </header>
