--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
     <header class="logo">
-        <img class="cabecalho-imagem" src="logo.png" alt="logo">
-        <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#Menu">Menu</a></li>
-            <li class="cabecalho-lista-item"><a href="#Sobre">Sobre</a></li>
+        <img class="logo-imagem" src="logo.png" alt="logo">
+        <ul class="logo-lista">
+            <li class="logo-lista-item"><a href="#Menu">Menu</a></li>
+            <li class="logo-lista-item"><a href="#Sobre">Sobre</a></li>
         </ul>
     </header>
