--- a/index.html
+++ b/index.html
@@ -20,3 +20,13 @@
             <li class="logo-lista-item"><a href="#Sobre">Sobre</a></li>
         </ul>
     </header>
+
+    <div class="content grid top">
+        <div class="box">
+          <div class="img">
+            <img src="l1.png" alt="">
+            <div class="flex1">
+              <label>50%</label>
+              <i class="fas fa-heart"></i>
+            </div>
+          </div>
