--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <div class="img">
             <img src="l1.png" alt="">
             <div class="flex1">
+                <label>Falar sobre a moto</label>
               <i class="fas fa-heart"></i>
             </div>
           </div>
