--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
         <h2>Menu</h2>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#services">Serviços</a></li>
-            <li><a href="#contact">Contato</a></li>
+            <li><a href="#about">Sobre</a></li>>
         </ul>
     </div>
 
