--- a/index.html
+++ b/index.html
@@ -29,3 +29,13 @@
     </div>
 </body>
 </html>
+
+<header>
+    <img src="logo.png" alt="logo fp">
+    <nav>
+        <ul>
+            <li>Menu</li>
+            <li>Sobre</li>
+        </ul>
+    </nav>
+</header>
