--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </html>
 
 <header>
-    <img src="" alt="logo fp">
+    <img src="logo.png" alt="logo fp">
     <nav>
         <ul>
             <li>Menu</li>
