--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="sidebar">
         <h2>Menu</h2>
+        <img src="logo.png" alt="logo fp">
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">Sobre</a></li>>
