--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
+        <img src="logo.png" alt="logo fp">
         <h2>Menu</h2>
         <ul>
             <li><a href="#home">Home</a></li>
