--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="content">
-        <section id="home">
+        <section id="Motos">
             <h2>Home</h2>
             <p>Conteúdo da seção Home...</p>
         </section>
