--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="logo.png" alt="logo fp">
         <h2>Menu</h2>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">Motos</a></li>
             <li><a href="#about">Sobre</a></li>>
         </ul>
     </div>
