--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="content">
         <section id="Motos">
-            <h2>Home</h2>
+            <h2>Motos</h2>
             <p>Conteúdo da seção Home...</p>
         </section>
         
