--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <div class="content">
         <section id="Motos">
             <h2>Motos</h2>
-            <p>Conteúdo da seção Home...</p>
         </section>
         <div class="item active">
             <div class="car-img">
-                <img src="1.webp" alt="imagem carro">
+                <img src="1.webp" alt="imagem moto">
             </div>
             <div class="content">
                 <P class="informaçoes">
