--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <img src="logo.png" alt="logo fp">
         <h2>Menu</h2>
         <ul>
-            <li><a href="#home">Motos</a></li>
-            <li><a href="#about">Sobre</a></li>>
+            <li><a href="#Motos">Motos</a></li>
+            <li><a href="#Sobre">Sobre</a></li>>
         </ul>
     </div>
 
