--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h2>Motos</h2>
         </section>
         <div class="item active">
+            <span></span>
             <div class="car-img">
                 <img src="1.webp" alt="imagem moto">
             </div>
