--- a/index.html
+++ b/index.html
@@ -58,5 +58,22 @@
                 
             </div>
         </div>
+
+
+        <div class="setas">
+            <button id="prev"><img src="./img/arrow.png" alt="seta esquerda"></button>
+            <button id="next"><img src="./img/arrow.png" alt="seta direita"></button>
+        </div>
+
+        <div class="indicadores">
+            <div class="numero">01</div>
+            <ul>
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+        
 </body>
 </html>
