--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="item active">
             <div class="car-img">
-                <img src="1.webp" alt="imagem moto">
+                <img src="" alt="imagem moto">
             </div>
             <div class="content">
                 <P class="informaçoes">
@@ -58,6 +58,5 @@
                 </script>
             </div>
         </div>   
-
 </body>
 </html>
