--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="item active">
             <div class="car-img">
-                <img src="" alt="imagem moto">
+                <img src="1.webp" alt="imagem moto">
             </div>
             <div class="content">
                 <P class="informaçoes">
