--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         </section>
 
  
-
         <div class="item active">
             <div class="car-img">
                 <img src="1.webp" alt="imagem moto">
-            </div>
+        </div>
             <div class="content">
                 <P class="informaçoes">
+                    <span></span>
                     MARCA
                 </P>
                 <h2>
@@ -36,6 +36,7 @@
                 <p class="descrição">
                     CG 160 Start
                 </p>
+        
                 <button class="informação" onclick="mostrarInformacoes()">
                     Saiba Mais
                 </button>
