--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </ul>
     </div>
 
-    <section id="Motos">
-            <h2>Motos</h2>
-        </section>
-
+    <div class="content">
+        <section id="Motos">
+                <h2>Motos</h2>
+            </section>
  
         <div class="item active">
             <div class="car-img">
-                <img src="" alt="imagem moto">
-        </div>
+                <img src="1.webp" alt="imagem moto">
+            </div>
             <div class="content">
                 <P class="informaçoes">
                     MARCA
