--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <li><a href="#Motos">Motos</a></li>>
         </ul>
     </div>
-
+    
+    <div class="content">
+        <section id="Sobre">
+                <h2>Sobre</h2>
+            </section>
+    
     <div class="content">
         <section id="Motos">
                 <h2>Motos</h2>
