--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         </ul>
     </div>
     
+    <div class="content">
+        <section id="Motos">
+                <h2>Motos</h2>
+            </section>
 
 
 
-    
     <div class="content">
         <section id="Motos">
                 <h2>Motos</h2>
