--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     
     <div class="content">
-        <section id="Motos">
-                <h2>Motos</h2>
+        <section id="Sobre">
+                <h2>Sobre</h2>
             </section>
 
 
