--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     
-    <div class="content">
+    <div class="content a">
         <section id="Sobre">
                 <h2>Sobre</h2>
             </section>
